tests/files/type_checker_tests/should_fail/024.cmdr
//Should fail on modulo set when left side is not a variable
5 %= 3;